--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,25 +15,36 @@ jobs:
       uses: r-lib/actions/setup-r@v2
     - name: Install dependencies
       run: |
-        install.packages(c("testthat", "plumber", "metafor", "assertthat", "readxl", "jsonlite", "ggplot2", "dplyr", "httr"))
+        install.packages(c("testthat", "plumber", "metafor", "assertthat", "readxl", "jsonlite", "ggplot2", "dplyr", "httr", "checkmate"))
       shell: Rscript {0}
     - name: Run tests
       run: |
-        testthat::test_dir("tests")
-      shell: Rscript {0}
+        Rscript tests/run_tests.R
 
-  build:
+  build-and-push:
     needs: test
     runs-on: ubuntu-latest
     env:
       APP_PORT: 8000
     steps:
     - uses: actions/checkout@v2
-    - name: Build Docker image
-      run: docker build -t meta-analysis-api .
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: mmrech/meta-analysis-api:latest
     - name: Test Docker image
       run: |
-        docker run -d -p ${{ env.APP_PORT }}:${{ env.APP_PORT }} --name test-container meta-analysis-api
-        sleep 5
-        curl -f http://localhost:${{ env.APP_PORT }}/test || exit 1
+        docker run -d -p ${{ env.APP_PORT }}:${{ env.APP_PORT }} --name test-container mmrech/meta-analysis-api:latest
+        sleep 10
+        curl -f http://localhost:${{ env.APP_PORT }}/health || exit 1
         docker stop test-container
+        docker rm test-container
