--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       uses: r-lib/actions/setup-r@v2
     - name: Install dependencies
       run: |
-        install.packages(c("testthat", "plumber", "metafor", "assertthat", "readxl", "jsonlite", "ggplot2", "dplyr", "httr", "checkmate"))
+        install.packages(c('plumber', 'metafor', 'assertthat', 'readxl', 'jsonlite', 'ggplot2', 'dplyr', 'httr', 'testthat', 'checkmate'))
       shell: Rscript {0}
     - name: Run tests
       run: |
