--- a/.github/workflows/r-tests.yml
+++ b/.github/workflows/r-tests.yml
@@ -11,7 +11,7 @@ jobs:
       uses: r-lib/actions/setup-r@v2
     - name: Install dependencies
       run: |
-        install.packages(c("testthat", "httr", "jsonlite", "checkmate", "metafor", "plumber", "assertthat", "readxl", "ggplot2", "dplyr"))
+        install.packages(c('plumber', 'metafor', 'assertthat', 'readxl', 'jsonlite', 'ggplot2', 'dplyr', 'httr', 'testthat', 'checkmate'))
       shell: Rscript {0}
     - name: Run tests
       run: |
